# Tomb1Main

.github/actions/prepare_macos_tooling/: action.yml
.github/workflows/: job_build_tr1_macos.yml  job_build_tr2_macos.yml  pr_builds.yml  prerelease.yml
data/tr2/mac/: Info.plist  icon.icns
docs/: CONTRIBUTING.md
docs/tr1/: SECRETS.md
docs/tr2/: CHANGELOG.md  README.md
src/libtrx/gfx/3d/: 3d_renderer.c
src/tr1/: meson.build
src/tr1/specific/: s_shell.c
src/tr2/: meson.build
src/tr2/game/: output.c
src/tr2/game/render/: common.c
tools/shared/mac/: bundle_dylibs  create_installer
